<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/input_username_hint"
        android:textColorHint="@color/inputHintColor"
        android:padding="16dp"
        android:background="@color/inputBackgroundColor"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/inputTextColor" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/input_password_hint"
        android:textColorHint="@color/inputHintColor"
        android:padding="16dp"
        android:background="@color/inputBackgroundColor"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/inputTextColor" />

    <Button
        android:id="@+id/input_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/input_submit"
        android:textAllCaps="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="24dp" />
</LinearLayout>